tests/Rules/Structure/Fixtures/valid/frame_with_title.html.twig
<frameset>
  <frame src="page1.html" title="Main content">
</frameset>
