tests/Rules/Structure/Fixtures/invalid/frame_no_title.html.twig
{# 1 errors #}
<frame src="page1.html">
